--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.11.1",
     "react-redux": "^7.2.4",
+    "react-signature-canvas": "^1.0.3",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
