--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.11.1",
+    "react-player": "^2.9.0",
     "react-redux": "^7.2.4",
     "react-signature-canvas": "^1.0.3",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "tailwindcss": "^2.2.4"
+    "tailwindcss": "^2.2.4",
+    "video-react": "^0.14.1"
   },
   "devDependencies": {
     "@types/node": "^15.14.0",
