--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^1.0.1",
     "@tailwindcss/forms": "^0.3.3",
     "next": "latest",
+    "rc-slider": "^9.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.11.1",
@@ -21,6 +22,7 @@
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "screenfull": "^5.1.0",
     "tailwindcss": "^2.2.4"
   },
   "devDependencies": {
