--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@brainhubeu/react-carousel": "^2.0.4",
     "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.1",
     "@tailwindcss/forms": "^0.3.3",
@@ -26,6 +27,7 @@
     "tailwindcss": "^2.2.4"
   },
   "devDependencies": {
+    "@types/brainhubeu__react-carousel": "^2.0.4",
     "@types/node": "^15.14.0",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.8",
