--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-player": "^2.9.0",
     "react-redux": "^7.2.4",
     "react-signature-canvas": "^1.0.3",
+    "react-twitter-embed": "^3.0.3",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
